pghoard X.X.X (XXXX-XX-XX)
==========================

* `local-tar` backups are now split to roughly 2 gigabyte chunks of
  plain-text files
* Alternative `pghoard_postgres_command` implementation in Go for faster
  startup times.  The time that the Python implementation takes to start
  limits WAL restore throughput quite a bit

pghoard 1.5.0 (2017-06-07)
==========================

* New tool, `pghoard_archive_cleanup` to clean up any orphan WAL segments
  from the object store
* Basebackup `end-time` and `end-wal-segment` are now stored in metadata and
  used for PITR when `local-tar` basebackups are used
* Azure object storage updated to work with the latest python-azure-storage
  module and promoted to production ready status
* Google object storage driver now retries operations on failure to work
  around transient connection reset and backend failure issues
* Google object storage compatibility with Google oauth2client version 1.5+
* S3 driver now supports server side encryption
* Swift driver now supports the region_name configuration option
* Support for `local-tar` backups of a replica on PostgreSQL 9.6 and newer
  using the new non-exclusive backup mechanism.  Previous PostgreSQL
  versions require the pgespresso extension to take backups of replicas
  using the `local-tar` method, the pg_basebackup utilizing (default)
  methods have always supported backups of replicas
* When `local-tar` basebackups are used in exclusive mode (PG <= 9.5 without
  pgespresso) any conflicting exclusive basebackup is automatically cancelled
  to allow PGHoard to take its own basebackup.  This is sometimes required if
  a previous PGHoard process has been killed while it was taking a backup
* Support pghoard_restore --recovery-target-action with 9.3 and 9.4
* Creating a `maintenance_mode_file` as documented in README now stops
  automatic basebackups from being created
* Changed the default directory for `maintenance_mode_file` and